--- a/mai/index.html
+++ b/mai/index.html
@@ -2,8 +2,13 @@
 <head>
 <style>
     body{
-        height:100%;
-        background-color: wheat;
+      background-color: #face92;
+    font-family: sans-serif;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     }
     .msg{
         font-size: 30px;
@@ -15,12 +20,13 @@
     }
 
     .container{
-        text-align: center;
-        border-radius: 20px;
-        width: 300px;
-        height: 350px;
-        margin: auto;
-        position: absolute;
+      background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1),0px 6px 6px rgba(0, 0, 0, 0.1);
+    padding:50px 20px;
+    text-align: center;
+    width: 800px;
+    max-width: 100%;
         top: 0;
         left: 0;
         right: 0;
